--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -13,6 +13,7 @@
     margin: 0;
     box-sizing: border-box;
 }
+
 html {
     font-size: 62.5%;
 }
@@ -22,7 +23,38 @@ body {
     line-height: 1.5;
     text-rendering: optimizeSpeed;
     color: var(--text-color);
+    overflow-y: overlay;
 }
+// Scroll bar
+
+html *::-webkit-scrollbar {
+    border-radius: 0;
+    width: 8px;
+}
+html *::-webkit-scrollbar {
+    border-radius: 0;
+    width: 8px;
+}
+html *::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(22, 24, 35, 0.06);
+}
+
+html *::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(22, 24, 35, 0.06);
+}
+
+html *::-webkit-scrollbar-track {
+    border-radius: 0;
+    background-color: rgba(0, 0, 0, 0);
+}
+
+html *::-webkit-scrollbar-track {
+    border-radius: 0;
+    background-color: rgba(0, 0, 0, 0);
+}
+
 button,
 input,
 [tabindex] {
@@ -40,19 +72,16 @@ button {
 
 // Font Embeded
 
-
-
 // Custom Tooltip tippy
 body {
     .tippy-box {
-    background-color: rgba(84, 84, 84, 0.92);
-    font-weight: 400;
-    font-size: 1.6rem;
-    line-height: 2.2rem;
-    border-radius: 8px;
+        background-color: rgba(84, 84, 84, 0.92);
+        font-weight: 400;
+        font-size: 1.6rem;
+        line-height: 2.2rem;
+        border-radius: 8px;
     }
-    .tippy-arrow{
-        color: rgba(84, 84, 84, 0.92)
+    .tippy-arrow {
+        color: rgba(84, 84, 84, 0.92);
     }
 }
-
